tdf#61028 OOXML export: fix lost arcTo shape

a:custGeom was exported without the a:arcTo element
and its attributes.

Note: see customshapegeometry.cxx for import of a:arcTo
attributes.

Change-Id: I611ea9fb6a81d45cfd52a16abbb37071ea0ce7d1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/108874
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>